# omnifocus-toolkit

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  omnifocus_common.py  omnifocus_inbox_triage.py  omnifocus_mcp_server.py  omnifocus_omnioutliner_sync.py  omnifocus_sorter.py  omnifocus_task_reviewer.py  omnifocus_x.py  pyproject.toml
omnifocus_kanban_plugin/: README.md
omnifocus_kanban_plugin/of-kanban-board.omnifocusjs/: manifest.json
omnifocus_kanban_plugin/of-kanban-board.omnifocusjs/Resources/: Clear.js  Done.js  InProgress.js  Reviewed.js  Setup.js  ToDo.js  Waiting.js
omnifocus_kanban_plugin/of-kanban-board.omnifocusjs/Resources/en.lproj/: Reviewed.strings
tests/: test_omnifocus_common.py  test_omnifocus_inbox_triage.py  test_omnifocus_mcp_server.py  test_omnifocus_sorter.py  test_omnifocus_task_reviewer.py  test_omnifocus_x.py
